--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -1,4 +1,6 @@
 version: 0.2
+# Do not change version. This is the version of aws buildspec, not the version of your buldspec file.
+version: 0.2
 phases:
   pre_build:
     commands:
@@ -18,8 +20,5 @@ artifacts:
     - public/**/*
     - src/**/*
     - package.json
-    - scripts/**/*
-    - .gitignore
-    - package-lock.json
-    - webpack.config.js
     - appspec.yml
+    - scripts/**/*
