Troubleshooting changes for buildspec

--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -1,4 +1,3 @@
-version: 0.2
 # Do not change version. This is the version of aws buildspec, not the version of your buldspec file.
 version: 0.2
 phases:
@@ -6,6 +5,8 @@ phases:
     commands:
       #installs dependencies into the node_modules/ directory
       - npm install
+      - echo node -v
+      - echo npm -v
   build:
     commands:
       - echo Build started on `date`
