--- a/appspec.yml
+++ b/appspec.yml
@@ -27,3 +27,8 @@ hooks:
     - location: scripts/app_start.sh
       timeout: 300
       runas: root
+
+  PM2Start:
+    - location: scripts/pm2_start.sh
+      timeout: 300
+      runas: root
